manifests/persesOperator-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: perses-operator
    app.kubernetes.io/instance: perses-k8s
    app.kubernetes.io/name: perses-operator
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.1.10
  name: perses-k8s
  namespace: monitoring
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: perses-operator
      app.kubernetes.io/name: perses-operator
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Egress
  - Ingress
